# MLOps_project

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.train.yaml  fraud.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/workflows/: data-change.yaml  model-change.yaml  tests.yaml
configs/: config.yaml
dockerfiles/: .dockerignore  api.dockerfile  train.dockerfile
docs/: profiling.md
geofr/: inf.txt  requirements.txt  train.py
reports/: README.md
src/credit_card_fraud_analysis/: api.py  data.py  evaluate.py  lightning_module.py  make_dataset.py  model.py  scalable.py  train.py  train_lightning.py  train_lightning2.py
tests/: test_data.py
